Prevent text in sidebar logo from wrapping [WEB-1938]

--- a/frontend/scss/organisms/_o-article__primary-actions.scss
+++ b/frontend/scss/organisms/_o-article__primary-actions.scss
@@ -234,6 +234,7 @@
 
   .m-article-actions--publication__logo {
     margin-bottom: 40px;
+    white-space: nowrap;
 
     @include font-styles(generate-font-obj(
       (
